@@ -7,7 +7,7 @@ struct command;
 struct answer;
 
 int rfs_connect(const char *ip, const unsigned port);
-void rfs_disconnect(int sock);
+void rfs_disconnect(int sock, int gently);
 
 size_t rfs_send_cmd(const int sock, const struct command *cmd);
 size_t rfs_send_answer(const int sock, const struct answer *ans);
@@ -17,6 +17,8 @@ size_t rfs_receive_answer(const int sock, struct answer *ans);
 size_t rfs_receive_data(const int sock, void *data, const size_t data_len);
 
 size_t rfs_ignore_incoming_data(const int sock, const size_t data_len);
+int rfs_is_connection_lost();
+void rfs_set_connection_restored();
 
 #ifdef RFS_DEBUG
 void dump_sendrecv_stats();
